Bug 3596:Already paid field should not be visible until a payment is made on a invoice. Bug 3593:S3 OS v 4.4 - Street 1 field - able to type 100 chars then get msg that only 80 saved. Bug 3537:Read only items should be displayed as grayed out. (Part 1 without review changes)

--- a/ReckonMobileDevV04/resources/sass/app.scss
+++ b/ReckonMobileDevV04/resources/sass/app.scss
@@ -2112,6 +2112,12 @@ rm-emailinvoicebackground{
         }
 }
 
+.rm-flatfield-disabled-pt0{
+    .x-input-el{
+        padding-top: 0 !important;
+    }
+}
+
 .rm-mask-obscured {
     background: rgb(50,50,50);
 }
